--- a/q/275303.html
+++ b/q/275303.html
@@ -26,8 +26,8 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>120</td><td>Retina 0.8.2</td><td>240903T175255Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275330#275330">Neil</a></td></tr>
-<tr d-ix="1"><td>070</td><td>JavaScript + momentjs</td><td>240903T101110Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275318#275318">doubleun</a></td></tr>
+<tr d-ix="0"><td>056</td><td>JavaScript + momentjs</td><td>240903T101110Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275318#275318">doubleun</a></td></tr>
+<tr d-ix="1"><td>120</td><td>Retina 0.8.2</td><td>240903T175255Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275330#275330">Neil</a></td></tr>
 <tr d-ix="2"><td>079</td><td>JavaScript Node.js</td><td>240902T084009Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275304#275304">l4m2</a></td></tr>
 <tr d-ix="3"><td>nan</td><td>Ruby</td><td>240903T084423Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275317#275317">G B</a></td></tr>
 <tr d-ix="4"><td>128</td><td>Python 3</td><td>240903T025930Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275315#275315">Lucenapo</a></td></tr>
@@ -35,7 +35,24 @@
 <tr d-ix="6"><td>052</td><td>05AB1E</td><td>240902T153854Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275310#275310">Kevin Cr</a></td></tr>
 <tr d-ix="7"><td>069</td><td>Google Sheets</td><td>240902T100442Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275308#275308">doubleun</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language/a950ad7d925ec9316e3e2fb2cf5d49fd15d23e3d" rel="nofollow noreferrer">Retina 0.8.2</a>, 120 bytes</h1>
+<div id="pu0" class="pu"><h1>JavaScript + <a href="https://momentjs.com/" rel="nofollow noreferrer">momentjs</a>, 56 bytes</h1>
+<pre><code>f=(a,b,c)=&gt;[a+b+c,c+a+b,c+b+a].map(s=&gt;m(20+s).isValid())
+</code></pre>
+<p>Based on my <a href="https://codegolf.stackexchange.com/a/275308/119296">Google Sheets answer</a>. Expects three string arguments as in <code>f('24','12','31')</code>.</p>
+<p>Requires an import. In <a href="https://developers.google.com/apps-script" rel="nofollow noreferrer">Apps Script</a>:</p>
+<pre><code>eval(UrlFetchApp.fetch('https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js').getContentText())
+m = moment
+</code></pre>
+<p>In browsers:</p>
+<pre><code>req = new XMLHttpRequest()
+req.open('GET', 'https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js', false)
+req.send()
+eval(req.responseText)
+m = moment
+</code></pre>
+<p>Sorry no TIO, don't know how to import <code>momentjs</code> there.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language/a950ad7d925ec9316e3e2fb2cf5d49fd15d23e3d" rel="nofollow noreferrer">Retina 0.8.2</a>, 120 bytes</h1>
 <pre><code>(..)(..)
 $'$2$1¶$'$&amp;¶$&amp;
 %`([02468][048]|[13579][26])0229|..(?!0229|023|(0[469]|11)31)(0[1-9]|1[0-2])(?!00)([0-2].|30|31)
@@ -57,23 +74,6 @@ $'$2$1¶$'$&amp;¶$&amp;
 <pre><code>(0[1-9]|1[0-2])(?!00)([0-2].|30|31)
 </code></pre>
 <p>Check that the month is 1-12 and the day is 0-31 but not 0.</p>
-</div>
-<div id="pu1" class="pu"><h1>JavaScript + <a href="https://momentjs.com/" rel="nofollow noreferrer">momentjs</a>, 70 bytes</h1>
-<pre><code>f=(a,b,c)=&gt;[[a,b,c],[c,a,b],[c,b,a]].map(r=&gt;m(20+r.join`-`).isValid())
-</code></pre>
-<p>Based on my <a href="https://codegolf.stackexchange.com/a/275308/119296">Google Sheets answer</a>. Expects three string arguments as in <code>f('24','12','31')</code>.</p>
-<p>Requires an import. In <a href="https://developers.google.com/apps-script" rel="nofollow noreferrer">Apps Script</a>:</p>
-<pre><code>eval(UrlFetchApp.fetch('https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js').getContentText())
-m = moment
-</code></pre>
-<p>In browsers:</p>
-<pre><code>req = new XMLHttpRequest()
-req.open('GET', 'https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js', false)
-req.send()
-eval(req.responseText)
-m = moment
-</code></pre>
-<p>Can probably be golfed more. Sorry no TIO, don't know how to import <code>momentjs</code> there.</p>
 </div>
 <div id="pu2" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 79 bytes</h1>
 
