--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240903T233237Z
+"   /golfscore                                      20240904T003001Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
 <a href="q/275303.html">Is it a date format of YYMMDD MMDDYY and/or DDMM: 0275303</a>
+<a href="q/1576.html">Compute the first N digits of e                 : 0001576</a>
 <a href="q/235964.html">Implement the hyperfactorial                    : 0235964</a>
 <a href="q/275331.html">Convert 8 Bit brainfuck to 1 bit Brainfuck / Boo: 0275331</a>
 <a href="q/275212.html">Stuck on Sokoban                                : 0275212</a>
